[package]
name = "block_chain"
version = "0.1.0"
authors = ["Bosswell <bosswell9@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4"
crypto-hashes = "0.9.0"

[[bin]]
name = "block_chain"
path = "src/main.rs"
